--- a/assignment_2/index.html
+++ b/assignment_2/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laundry Services</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <style>
     body, html {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
+      width: 100%;
       height: 100%;
+    }
+
+    .navbar_wrapper {
+      background-color: #2c3e50;
     }
 
     /* Navbar */
@@ -17,7 +23,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #2c3e50;
       color: white;
       padding: 15px 40px;
     }
@@ -66,7 +71,6 @@
     .hero-left {
       flex-direction: column;
       padding: 40px;
-      background-color: #ecf0f1;
     }
 
     .hero-left h1 {
@@ -103,28 +107,33 @@
 <body>
 
   <!-- Navbar -->
-  <nav>
-    <div class="logo">Laundry Mart</div>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-    <div class="user-name">Hello, Mayank</div>
-  </nav>
+  <div class="container-fluid px-0 navbar_wrapper">
+    <nav class="navbar container">
+      <div class="logo">Laundry Mart</div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <div class="user-name">Hello, Mayank</div>
+    </nav>
+  </div>
+
 
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero container">
     <div class="hero-left">
       <h1>Fresh Clothes, Every Time!</h1>
       <p>Experience premium laundry services at affordable prices. We care for your clothes like they’re our own.</p>
       <button>Book a Service Today</button>
     </div>
     <div class="hero-right">
-      <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952" alt="Laundry Service">
+      <img width="100%" height="100%" src="https://images.unsplash.com/photo-1581578731548-c64695cc6952" alt="Laundry Service">
     </div>
   </section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 </html>
